--- a/webui/src/scss/_controls.scss
+++ b/webui/src/scss/_controls.scss
@@ -50,9 +50,8 @@ label.disabled {
 	}
 
 	&.var-label {
-		font-weight: inherit;
-		white-space: wrap;
 		font-weight: normal;
+		white-space: normal;
 	}
 }
 
